condensed code into methods for readability